[~] Fixed top spacing of elements

--- a/app/client/src/scss/main.scss
+++ b/app/client/src/scss/main.scss
@@ -117,6 +117,12 @@ section {
     margin: 0 auto;
 }
 
+.element {
+    &:first-of-type{
+        margin-top: 100px;
+    }
+}
+
 .section_content{
     max-width: var(--MaxWidthContent);
     margin: 0 auto;
